public class AnimationStrings
{
    public static string IsMoving { get; internal set; } = "IsMoving";
    public static string IsGrounded { get; internal set; } = "IsGrounded";
    public static string YVelocity { get; internal set; } = "YVelocity";
    public static string JumpTrigger { get; internal set; } = "Jump";
    public static string IsOnWall { get; internal set; } = "IsOnWall";
    public static string IsOnCeiling { get; internal set; } = "IsOnCeiling";
    public static string AttackTrigger { get; internal set; } = "Attack";
    public static string CanMove { get; internal set; } = "CanMove";
    public static string HasTarget { get; internal set; } = "HasTarget";
    public static string IsAlive { get; internal set; } = "IsAlive";
    public static string HitTrigger { get; internal set; } = "Hit";
    public static string LockVelocity { get; internal set; } = "LockVelocity";
}
